test-ns/postgres-deployment - temp.yaml
# making pg data persistent https://stackoverflow.com/questions/75223014/postgresql-data-on-k8s-cannot-be-made-persistent
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: ohdsi-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15.9-bullseye
        ports:
        - containerPort: 5432
        #command: ["sh", "-c", "psql -U postgres -f //docker-entrypoint-initdb.d/init.sql; sleep infinity"]
        volumeMounts:
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
        #- name: persistence
        #  mountPath: /data
        #  subPath: postgres-data
      #initContainers:
      #  - name: create-folder
      #    image: busybox
      #    command: ["sh", "-c", "mkdir -p /data/postgres-data"]
      #    volumeMounts:
      #      - name: persistence
      #        mountPath: /data

      volumes:
      - name: init-script
        configMap:
          name: postgresql-init-script
      #- name: persistence
      #  persistentVolumeClaim:
      #    claimName: postgres-pv-claim
